<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/row_padding_vertical"
        android:text="@string/choose_currency" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radiButtonUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_usd" />

        <RadioButton
            android:id="@+id/radiButtonEUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_eur" />

        <RadioButton
            android:id="@+id/radiButtonCUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cud" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/row_padding_vertical"
        android:text="@string/limit_prompt" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/limit_array" />
</LinearLayout>
